--- a/style.css
+++ b/style.css
@@ -1,5 +1,9 @@
 body {
-  overflow:hidden;
   margin:0;
-  background-color:#221f26;
+  overflow:hidden;
 }
+canvas {
+  width: 100%;
+  height: 100%;
+}
+
